--- a/docs/study-notes/back-end/redis/3.redis10大数据类型/6.Redis哈希(Hash).md
+++ b/docs/study-notes/back-end/redis/3.redis10大数据类型/6.Redis哈希(Hash).md
@@ -3,7 +3,7 @@ title: 6.Redis哈希(Hash)
 createTime: 2025/08/25 22:29:42
 permalink: /article/lgce36sf/
 ---
-# Redis哈希(Hash)
+# 6.Redis哈希(Hash)
 
 KV模式不变，但V是一个键值对  Map<String, Map<Object, Object>>
 
