--- a/docs/study-notes/back-end/redis/7.Redis发布订阅/1.Redis发布订阅介绍.md
+++ b/docs/study-notes/back-end/redis/7.Redis发布订阅/1.Redis发布订阅介绍.md
@@ -3,7 +3,7 @@ title: 1.Redis发布订阅介绍
 createTime: 2025/08/25 22:29:41
 permalink: /article/2sprvxnl/
 ---
-# Redis发布订阅介绍
+# 1.Redis发布订阅介绍
 
 #### $\textcolor{green}{学习定位：了解即可}$
 
