--- a/docs/study-notes/back-end/redis/10.Redis集群(cluster)/1.Redis集群介绍.md
+++ b/docs/study-notes/back-end/redis/10.Redis集群(cluster)/1.Redis集群介绍.md
@@ -1,11 +1,11 @@
 ---
-title: Redis集群介绍
+title: 1.Redis集群介绍
 tags:
   - redis
 createTime: 2025/08/25 22:29:43
 permalink: /article/gt99yz9b/
 ---
-# Redis集群介绍
+# 1.Redis集群介绍
 
 ### 是什么
 
