--- a/docs/study-notes/back-end/redis/10.Redis集群(cluster)/2.集群算法-分片-槽位slot.md
+++ b/docs/study-notes/back-end/redis/10.Redis集群(cluster)/2.集群算法-分片-槽位slot.md
@@ -1,11 +1,11 @@
 ---
-title: 集群算法-分片-槽位slot
+title: 2.集群算法-分片-槽位slot
 tags:
   - redis
 createTime: 2025/08/25 22:29:43
 permalink: /article/3du5swea/
 ---
-# 集群算法-分片-槽位slot
+# 2.集群算法-分片-槽位slot
 
 ### 官网出处：
 
