--- a/docs/study-notes/back-end/redis/11.SpringBoot集成Redis/3.RedisTemplate连接集群.md
+++ b/docs/study-notes/back-end/redis/11.SpringBoot集成Redis/3.RedisTemplate连接集群.md
@@ -1,11 +1,11 @@
 ---
-title: RedisTemplate连接集群
+title: 3.RedisTemplate连接集群
 tags:
   - redis
 createTime: 2025/08/25 22:29:43
 permalink: /article/za98ya6m/
 ---
-#  RedisTemplate连接集群
+#  3.RedisTemplate连接集群
 
 启动Redis集群6台实例
 
